<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runButtonText"
        android:id="@+id/playButton"
        android:background="@drawable/play_button"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButtonText"
        android:id="@+id/nextButton"
        android:background="@drawable/play_button"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/playlistListView"
        android:layout_alignEnd="@+id/playlistListView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadenceTextViewText"
        android:id="@+id/cadenceTextView"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:layout_column="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidValText"
        android:id="@+id/cadenceValTextView"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cadenceTextView"
        android:layout_toEndOf="@+id/cadenceTextView"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tempoTextViewText"
        android:id="@+id/tempoTextView"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:layout_column="12"
        android:layout_marginLeft="50dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/cadenceValTextView"
        android:layout_toEndOf="@+id/cadenceValTextView"
        android:layout_marginStart="42dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/invalidValText"
        android:id="@+id/tempoValTextView"
        android:textSize="@dimen/abc_text_size_body_1_material"
        android:layout_column="13"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tempoTextView"
        android:layout_toEndOf="@+id/tempoTextView"
        android:layout_marginBottom="20dp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlistListView"
        android:layout_below="@+id/cadenceTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/playButton" />

</RelativeLayout>
